# django-project

./: LICENSE  README.md  pyproject.toml
src/app/: settings.py  urls.py
src/blog/: forms.py  models.py  tests.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_alter_pessoa_cpf.py  0003_alter_pessoa_cpf.py
src/blog/static/blog/: form.css  login.css  style.css  table.css
src/blog/templates/blog/: about.html  base.html  contact.html  index.html  list.html  login.html  success.html
src/blog/tests/: test_models.py
src/polls/: admin.py  tests.py  views.py
src/polls/migrations/: 0001_initial.py
